--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,16 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+
+/* ScannerModal Layout */
+.scanner-modal {
+	width: 90vw;
+	height: 80vh;
+}
+
+.scanner-modal-container {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+}
