--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,5 @@ If your plugin does not need CSS, delete this file.
 }
 
 .scanner-modal-container canvas {
-	width: 100%;
-	height: 100%;
-	max-width: 100%;
-	max-height: 100%;
-	object-fit: contain;
+	border: 1px solid gray;
 }
